keycloak/base/http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-http
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
    component: keycloak
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
