keycloak/base/ingressroute-keycloak.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://avatars0.githubusercontent.com/u/4921466?s=200&v=4"
    dashboard.zippelf.com/display-name: "Keycloak"
    dashboard.zippelf.com/docs: "https://www.keycloak.org/documentation"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-keycloak-ingress
